--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-        "start": "node app.js"
-  }
+  
+ "scripts": {
+  "start": "node app.js",
+  "test": "mocha"
+}
+
 
   "keywords": [],
   "author": "",
